[package]
name = "roux-stream"
version = "0.2.0"
authors = ["Florian Brucker <mail@florianbrucker.de>"]
edition = "2021"
license = "MIT"
description = "A streaming API for the roux Reddit client"
readme = "README.md"
homepage = "https://github.com/torfsen/roux-stream"
repository = "https://github.com/torfsen/roux-stream"
keywords = ["reddit", "roux", "stream", "api"]
categories = ["api-bindings", "asynchronous"]

[dependencies]
async-trait = "0.1"
futures = "0.3"
log = "0.4"
roux = { git = "https://github.com/halcyonnouveau/roux", rev = "629bb46" }
tokio = { version = "1", features = ["full"] }
tokio-retry = "0.3"
reqwest = { version = "0.11", default-features = false, features = ["json"] }
base64 = "0.22.1"
chrono = "0.4.38"
chrono-tz = "0.9.0"

[dev-dependencies]
logtest = "2.0.0"
stderrlog = "0.5.4"
tokio = { version = "1.28.1", features = ["full"] }
